@@ -2,7 +2,7 @@ Encoding: UTF-8
 Package: optparse
 Type: Package
 Title: Command Line Option Parser
-Version: 1.5.0-2
+Version: 1.5.0-3
 Author: Trevor L Davis. Some documentation and examples ported from Allen Day's
     getopt package. Some documentation from the optparse Python module by the
     Python Software Foundation. Contributions from Steve Lianoglou, Jim
@@ -20,7 +20,7 @@ Depends:
     R (>= 2.9.0)
 Imports:
     methods,
-    getopt (>= 1.19.0)
+    getopt (>= 1.20.2)
 Suggests:
     knitr (>= 1.15.19),
     stringr,
