@@ -5,6 +5,8 @@ optparse 1.5.0
   printing the help message (this matches behaviour of the python package).
 * Better help message when forgetting to set ``add_help_option=FALSE`` when
   defining an ``-h``` or ``-help`` flag.  Thanks Jeff P. Bruce for bug report.
+* Increment ``getopt`` requirement so that empty strings are parsed correctly.
+  Thanks Matthew Flickinger for bug report.
 
 optparse 1.4.4
 ==============
